# cmx-coffee-rest

./: .gitignore  Dockerfile  README.md  cmx-coffee-rest.postman_collection.json  default.properties  manage.py  pyproject.toml  requirements.txt  test.properties  test.py
.github/workflows/: publish.yml
src/admin/: daos.py  models.py  tests.py  views.py
src/admin/tests/: daos.py  views.py
src/app/: auth.py  authentication.py  connections.py  decorators.py  default.py  exceptions.py  permissions.py  prod.py  s3client.py  settings.py  str_tools.py  test.py  urls.py  validation.py  views.py  wsgi.py
src/app/authentication/: __init__.py  daos.py  models.py  tests.py  utils.py
src/app/email/: app-email-template.html
src/core/: __init__.py  daos.py  models.py  tests.py  views.py
src/core/migrations/: 0001_create_auth_integration_table.py  0002_create_vendor_applicant_table.py  0003_create_vendor_table.py  0004_create_product_table.py  0005_create_product_preferences_tables.py  0007_create_product_review_table.py  0008_create_mock_payment_and_order_table.py  (+2 more)
src/customer/: daos.py  models.py  views.py
src/customer_order/: daos.py  models.py  views.py
src/migrations/: 0003_create_vendor_table.py  0005_create_product_preferences_tables.py  0006_create_shopping_cart_table.py  0009_create_newsletter_migration.py  0010_alter_vendor_product.py  __init__.py
src/payment/: daos.py  models.py  views.py
src/product/: bruh.py  content.py  daos.py  models.py  views.py
src/product_review/: daos.py  models.py  views.py
src/static/: app-email-template.html
(+15 files in other folders)
